tests/compile_fail/non_ident_extra_pattern.stderr
error: entry pattern incompatible with arm pattern
 --> tests/compile_fail/non_ident_extra_pattern.rs:7:15
  |
7 |             { 1 }(val) => val,
  |               ^
